2000-07-11  DJ Delorie  <dj@cygnus.com>

	* include/shlobj.h: add CSIDL_COMMON_*

Tue Jun 27 19:35:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winbase.h: Add stream ids BACKUP_OBJECT_ID,
	BACKUP_REPARSE_DATA and BACKUP_SPARSE_BLOCK.
	Add file open flags FILE_FLAG_OPEN_REPARSE_POINT and
	FILE_FLAG_OPEN_NO_RECALL.
	* winioctl.h: Add device io control codes FSCTL_GET_REPARSE_POINT,
	FSCTL_SET_REPARSE_POINT and FSCTL_DELETE_REPARSE_POINT.
	* winnt.h: Add typedef for GUID.
	Add file attributes FILE_ATTRIBUTE_ENCRYPTED,
	FILE_ATTRIBUTE_SPARSE_FILE, FILE_ATTRIBUTE_REPARSE_POINT and
	FILE_ATTRIBUTE_NOT_CONTENT_INDEXED.
	Add volume attributes FILE_VOLUME_QUOTAS, FILE_SUPPORTS_SPARSE_FILES,
	FILE_SUPPORTS_REPARSE_POINTS, FILE_SUPPORTS_REMOTE_STORAGE,
	FILE_SUPPORTS_OBJECT_IDS and FILE_SUPPORTS_ENCRYPTION.
	Add several reparse point defines and typedefs for REPARSE_DATA_BUFFER,
	REPARSE_GUID_DATA_BUFFER and REPARSE_POINT_INFORMATION.
	* lib/psapi.def: New file.

Thu Jun 22 14:36:19 2000  Christopher Faylor <cgf@cygnus.com>

	* rpcdce.h: Protect OPTIONAL definition since it may be (legally)
	previously defined.
	* windef.h : Ditto.

2000-06-14  Kazuhiro Fujieda <fujieda@jaist.ac.jp>

	* include/winnt.h: Add some missing defines related to locale
	identifiers.  Translate values of LANG_* and SUBLANG_* into hexadecimal.

Thu May 27 15:57:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/wincrypt.h: Add missing CRYPT_MACHINE_KEYSET define.

Thu May 18 11:37:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h: Add some missing TAPE_DRIVE_* defines.

Wed Apr 26 11:04:18 2000  Christopher Faylor <cgf@cygnus.com>

	* include/wininet.h: Add another "INTERNET_OPTIONS".

2000-04-25  Mumit Khan  <khan@xraylith.wisc.edu>

	* include/winspool.h: Add 2 more PRINTER_ATTRIBUTE_* macros.

2000-04-25  Martin Kotulla  <martin-k@softmaker.de>

	* include/ddeml.h (DdeCreateStringHandle{A,W}): Fix prototype.